# vapoursynth-smoothuv-api4

./: .gitignore  COPYING  configure.ac  hatch_build.py  meson.build  pyproject.toml  readme.rst
.github/workflows/: build-windows.yml
src/: SmoothUV.cpp
tools/: ci_build_windows.py  ci_make_release_assets.py  ci_prepare_vs_wheel.py  ci_smoke_installed_wheel.py  ci_smoke_package.py  pkg_config_shim.py
