[build-system]
requires = ["hatchling>=1.30", "packaging>=24.0", "meson>=0.49", "ninja"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-smoothuv"
version = "3"
description = "SmoothUV VapourSynth plugin and RainbowSmooth helper script"
readme = "readme.rst"
license = { text = "GNU GPL (exact upstream version should be confirmed before publication)" }
license-files = ["COPYING"]
requires-python = ">=3.12"
authors = [{ name = "SmoothUV contributors" }]
dependencies = ["VapourSynth>=77"]

[project.urls]
"Source Code" = "https://github.com/RyougiKukoc/vapoursynth-smoothuv-api4"
"Releases" = "https://github.com/RyougiKukoc/vapoursynth-smoothuv-api4/releases"

[tool.hatch.build.targets.sdist]
include = [
  "COPYING",
  "RainbowSmooth.py",
  "configure.ac",
  "Makefile.am",
  "autogen.sh",
  "hatch_build.py",
  "meson.build",
  "pyproject.toml",
  "readme.rst",
  "src",
  "tools",
]

[tool.hatch.build.targets.wheel]
include = ["RainbowSmooth.py", "vapoursynth/plugins"]
artifacts = [
  "vapoursynth/plugins/**/*.dll",
  "vapoursynth/plugins/**/*.so",
  "vapoursynth/plugins/**/*.dylib",
  "vapoursynth/plugins/**/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
